@@ -1,6 +1,7 @@
-#Sun Oct 18 00:19:57 CEST 2009
+#Mon Oct 19 00:09:31 CEST 2009
 eclipse.preferences.version=1
 encoding//src/packages/tests/__init__.py=utf-8
+encoding//src/packages/tests/test_leak.py=utf-8
 encoding//src/packages/tests/test_md5.py=utf-8
 encoding//src/packages/tests/test_md5_encode.py=utf-8
 encoding//src/packages/tests/test_password_validate.py=utf-8
